fix: [CI-2666]: Handling repo and branch name overflow (#5576)
* fix: [CI-2666]: Handling branch and repo name overflow on listing page

* fix: [CI-2666]: Handling repo and branch name overflow, reducing code duplication

* fix: [CI-2666]: Cleanup

* fix: [CI-2666]: UX alignment

* fix: [CI-2666]: UX alignment

* fix: [CI-2666]: Snapshot update

* fix: [CI-2666]: Fixing UX for tags

* fix: [CI-2666]: Fixing UX for tags on details page

* fix: [CI-2666]: Component renamed

* fix: [CI-2666]: Component renamed, fixing PR UX

* fix: [CI-2666]: Fixing tag spacing

* fix: [CI-2666]: Adding new prop to handle detailed view separately

* fix: [CI-2666]: Minor fixes

* fix: [CI-2666]: Cleanup

* fix: [CI-2666]: Snapshot update

* fix: [CI-2666]: UX update

* fix: [CI-2666]: Snapshot update

--- a/src/modules/75-ci/components/CIExecutionCardSummary/CIExecutionCardSummary.module.scss
+++ b/src/modules/75-ci/components/CIExecutionCardSummary/CIExecutionCardSummary.module.scss
@@ -12,15 +12,10 @@
 
 .label {
   display: flex !important;
-  align-items: center !important;
-  white-space: nowrap !important;
-  font-size: var(--font-size-small) !important;
-  font-weight: 500 !important;
-  text-decoration: none !important;
-  color: var(--primary-7) !important;
   background-color: var(--primary-1) !important;
   border-radius: 8px !important;
   padding: var(--spacing-xsmall) var(--spacing-small) !important;
+  align-items: center;
 
   &.multiple {
     > * {
