--- a/src/modules/75-ci/components/CIExecutionSummary/CIExecutionSummary.module.scss
+++ b/src/modules/75-ci/components/CIExecutionSummary/CIExecutionSummary.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   overflow: hidden;
   column-gap: var(--spacing-3);
+  width: 100%;
 
   .icon {
     display: flex;
@@ -13,48 +14,6 @@
   &.pullRequest {
     .truncated {
       max-width: 120px;
-    }
-  }
-}
-
-.truncated {
-  max-width: 200px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.label {
-  display: flex !important;
-  align-items: center !important;
-  white-space: nowrap !important;
-  font-size: var(--font-size-small) !important;
-  font-weight: 500 !important;
-  text-decoration: none !important;
-  color: var(--primary-7) !important;
-  background-color: var(--primary-1) !important;
-  border-radius: 8px !important;
-  padding: var(--spacing-xsmall) var(--spacing-small) !important;
-
-  * {
-    font-size: inherit !important;
-    font-weight: inherit !important;
-    color: inherit !important;
-  }
-
-  &.multiple {
-    > * + * {
-      border-left: 1px solid var(--primary-3) !important;
-      padding-left: var(--spacing-small) !important;
-      margin-left: var(--spacing-small) !important;
-    }
-  }
-
-  svg {
-    margin-right: var(--spacing-xsmall);
-
-    path {
-      fill: currentColor !important;
     }
   }
 }
